tools/tests/errors/surf_cls_10.experr
cannot access private member
_hidden
